# zonos-api-docker

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEEPSPEED_IMPLEMENTATION.md  Dockerfile  Dockerfile.old  FINAL_STATUS.md  IMPROVEMENTS_IMPLEMENTED.md  MODEL_LOADING_BEHAVIOR.md  README.md  SUCCESS_CONFIRMATION.md  docker-compose.yml  pyproject.toml  requirements.txt  test_fixes.py  test_hybrid_batch.py  test_improvements.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  model.py  models.py
app/services/: tts.py
tests/: test_api.py
